# hycrypt

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CHANGELOG.md  README.md  TODO  example.py  pyproject.toml  requirements  requirements.txt  test.py
.github/workflows/: python-package.yml  static.yml
docs/: requirements.txt
docs/source/: conf.py  fycrypt.rst  hycrypt.rst  index.rst  install.rst  modules.rst
docs/source/_static/: custom.css  theme.css
examples/: example_data  example_file_cypher.py  example_fycrypt.py  example_hycrypt.py
hycrypt/: file_cryptosystem.py
hycrypt/file_cryptosystem/: file_cryptosystem.py
images/: LICENSE
src/hycrypt/: __about__.py  __init__.py  fycrypt.py  hycrypt.py
src/hycrypt/fycrypt/: fycrypt.py
src/tests/: __init__.py  test_file_cryptosystem.py
tests/: test_file  test_fycrypt.py  test_hycrypt.py
