[project]
name = "hycrypt"
authors = [{ name = "Sira Pornsiriprasert", email = "code@psira.me" }]
dynamic = ["version"]
description = "Hybrid cryptosystem implementation based on cryptography"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
]
dependencies = ["cryptography"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "hycrypt.__about__.__version__"}

[build-system]
requires = ["setuptools>=64", "cryptography"]
build-backend = "setuptools.build_meta"
