[project]
name = "hycrypt"
authors = [{ name = "Sira Pornsiriprasert", email = "code@psira.me" }]
dynamic = ["version"]
description = "Hybrid cryptosystem for python"
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-3-Clause"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Security :: Cryptography",
]
dependencies = [
    "cryptography",
]

[project.urls]
Homepage = "https://github.com/p-sira/hycrypt"
Documentation = "https://p-sira.github.io/hycrypt"
Repository = "https://github.com/p-sira/hycrypt"
Issues = "https://github.com/p-sira/hycrypt/issues"
Changelog = "https://github.com/p-sira/hycrypt/blob/main/CHANGELOG"

[tool.setuptools.dynamic]
version = {attr = "hycrypt.__about__.__version__"}

[build-system]
requires = ["setuptools>=64", "cryptography"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hycrypt"]

[tool.setuptools.package-dir]
"" = "."


[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "pydata-sphinx-theme>=0.14.4",
    "pytest>=8.3.5",
    "sphinx>=7.1.2",
]
